fix that cross btn on dialog is not visible

--- a/extensions/hide-products/assets/write-a-review.css
+++ b/extensions/hide-products/assets/write-a-review.css
@@ -17,7 +17,6 @@
    =========================================== */
 #write-a-review-app .p-button {
     font-size: 1em;
-    padding: 0.5em 1em;
 }
 
 #write-a-review-app .p-button.p-button-sm {
